# sokoscript

./: .gitignore  CLAUDE.md  E2  GAME_DESIGNER.md  Makefile  MersenneTwister.js  PLAN.md  README.md  TEST  board.js  engine.js  example.txt  grammar.js  grammar.pegjs  gramutil.js  log2.js  lookups.js  package.json  serialize.js  test.js
boards/: 4x4_x.json  64x64.json  forest_fire.json  sokoban.json
docs/: api.md  architecture.md  game-ideas.md  grammar-tutorial.md  narrator_analysis.md  terminal-debugger-proposal.md
grammars/: diffuse.txt  dominion.txt  ecosystem.txt  forest_fire.txt  key_door.txt  lv3.txt  minefield.txt  scout.txt  (+10 more)
python/: MersenneTwister.py  board.py  canonical-json.py  engine.py  gramutil.py  log2.py  lookups.py  md5.py  numberToBase64.py  pyproject.toml  serialize.py
python/experiments/: apple_heuristic.py  apple_rl.py  fire_heuristic.py  fire_rl.py  game_design_gradients.py  hyperparam_screen.py  keydoor_heuristic.py  keydoor_rl.py  miner_heuristic.py  miner_rl.py  plague_heuristic.py  plague_rl.py  predator_heuristic.py  predator_rl.py  run_all.py  score_function_estimator.py
python/rl/: curriculum.py  eval.py  local_obs.py  networks.py  special_actions.py  train_ppo.py  two_player.py  world_model_obs.py  world_models.py
python/sokoscript/: __init__.py  board.py  compiler.py  engine.py  env.py  jax_board.py  jax_engine.py  lookups.py  parser.py  rng.py  serialize.py
python/tests/: conftest.py  test_board.py  test_cross_validate.py  test_cross_validate_board.py  test_engine.py  test_env.py  test_games.py  test_lookups.py  test_parser.py
(+58 files in other folders)
